[gd_scene load_steps=11 format=2]

[ext_resource path="res://ASSETS/Pies/ButterChickenIdle1.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Pies/ButterChickenIdle0.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Pies/ButterChickenIdle2.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Pies/ButterChickenIdle3.png" type="Texture" id=4]
[ext_resource path="res://Pie.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/Assets/soundsandmusic/sounds/powerUp2.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "bounce"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -96 ), Vector2( 0, -64 ) ]
}

[node name="Pie" type="Area2D"]
collision_layer = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1, 1.5 )
frames = SubResource( 1 )
animation = "spin"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/bounce = SubResource( 4 )

[node name="SoundPieCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 1.5

[connection signal="body_entered" from="." to="." method="_on_Pie_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
